--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -60,7 +60,10 @@ code {
   margin: 0 10px;
 }
 
-input {
+input,
+select,
+textarea,
+option {
   font-size: 1rem;
   padding: 10px 5px;
   margin-top: 1rem;
@@ -146,4 +149,17 @@ form {
 
 .invisible {
   display: none;
+}
+
+table {
+  border-collapse: collapse;
+  padding: 20px;
+}
+
+table tbody tr {
+  padding: 10px 20px;
+}
+
+table tbody tr td {
+  padding: 10px 20px;
 }
